--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "01785581",
    "metadata": {},
    "outputs": [],
@@ -13,6 +13,237 @@
     "import tensorflow as tf\n",
     "from sklearn.model_selection import train_test_split"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9abfc6d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"../dataset/epl-2024-2025-data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cf76e75e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Div</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>HomeTeam</th>\n",
+       "      <th>AwayTeam</th>\n",
+       "      <th>FTHG</th>\n",
+       "      <th>FTAG</th>\n",
+       "      <th>FTR</th>\n",
+       "      <th>HTHG</th>\n",
+       "      <th>HTAG</th>\n",
+       "      <th>HTR</th>\n",
+       "      <th>Referee</th>\n",
+       "      <th>HS</th>\n",
+       "      <th>AS</th>\n",
+       "      <th>HST</th>\n",
+       "      <th>AST</th>\n",
+       "      <th>HF</th>\n",
+       "      <th>AF</th>\n",
+       "      <th>HC</th>\n",
+       "      <th>AC</th>\n",
+       "      <th>HY</th>\n",
+       "      <th>AY</th>\n",
+       "      <th>HR</th>\n",
+       "      <th>AR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>E0</td>\n",
+       "      <td>16/08/2024</td>\n",
+       "      <td>20:00</td>\n",
+       "      <td>Man United</td>\n",
+       "      <td>Fulham</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>H</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>D</td>\n",
+       "      <td>R Jones</td>\n",
+       "      <td>14</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>E0</td>\n",
+       "      <td>17/08/2024</td>\n",
+       "      <td>12:30</td>\n",
+       "      <td>Ipswich</td>\n",
+       "      <td>Liverpool</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>A</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>D</td>\n",
+       "      <td>T Robinson</td>\n",
+       "      <td>7</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>E0</td>\n",
+       "      <td>17/08/2024</td>\n",
+       "      <td>15:00</td>\n",
+       "      <td>Arsenal</td>\n",
+       "      <td>Wolves</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>H</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>H</td>\n",
+       "      <td>J Gillett</td>\n",
+       "      <td>18</td>\n",
+       "      <td>9</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>17</td>\n",
+       "      <td>14</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>E0</td>\n",
+       "      <td>17/08/2024</td>\n",
+       "      <td>15:00</td>\n",
+       "      <td>Everton</td>\n",
+       "      <td>Brighton</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>A</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>A</td>\n",
+       "      <td>S Hooper</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>E0</td>\n",
+       "      <td>17/08/2024</td>\n",
+       "      <td>15:00</td>\n",
+       "      <td>Newcastle</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>H</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>H</td>\n",
+       "      <td>C Pawson</td>\n",
+       "      <td>3</td>\n",
+       "      <td>19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15</td>\n",
+       "      <td>16</td>\n",
+       "      <td>3</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Div        Date   Time    HomeTeam     AwayTeam  FTHG  ...  HC  AC  HY  AY HR AR\n",
+       "0  E0  16/08/2024  20:00  Man United       Fulham     1  ...   7   8   2   3  0  0\n",
+       "1  E0  17/08/2024  12:30     Ipswich    Liverpool     0  ...   2  10   3   1  0  0\n",
+       "2  E0  17/08/2024  15:00     Arsenal       Wolves     2  ...   8   2   2   2  0  0\n",
+       "3  E0  17/08/2024  15:00     Everton     Brighton     0  ...   1   5   1   1  1  0\n",
+       "4  E0  17/08/2024  15:00   Newcastle  Southampton     1  ...   3  12   2   4  1  0\n",
+       "\n",
+       "[5 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b76b730",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -22,7 +253,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.3"
   }
  },
