--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "01785581",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "9abfc6d3",
    "metadata": {},
    "outputs": [],
@@ -26,221 +26,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "cf76e75e",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Div</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Time</th>\n",
-       "      <th>HomeTeam</th>\n",
-       "      <th>AwayTeam</th>\n",
-       "      <th>FTHG</th>\n",
-       "      <th>FTAG</th>\n",
-       "      <th>FTR</th>\n",
-       "      <th>HTHG</th>\n",
-       "      <th>HTAG</th>\n",
-       "      <th>HTR</th>\n",
-       "      <th>Referee</th>\n",
-       "      <th>HS</th>\n",
-       "      <th>AS</th>\n",
-       "      <th>HST</th>\n",
-       "      <th>AST</th>\n",
-       "      <th>HF</th>\n",
-       "      <th>AF</th>\n",
-       "      <th>HC</th>\n",
-       "      <th>AC</th>\n",
-       "      <th>HY</th>\n",
-       "      <th>AY</th>\n",
-       "      <th>HR</th>\n",
-       "      <th>AR</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>E0</td>\n",
-       "      <td>16/08/2024</td>\n",
-       "      <td>20:00</td>\n",
-       "      <td>Man United</td>\n",
-       "      <td>Fulham</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>H</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>D</td>\n",
-       "      <td>R Jones</td>\n",
-       "      <td>14</td>\n",
-       "      <td>10</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>12</td>\n",
-       "      <td>10</td>\n",
-       "      <td>7</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>E0</td>\n",
-       "      <td>17/08/2024</td>\n",
-       "      <td>12:30</td>\n",
-       "      <td>Ipswich</td>\n",
-       "      <td>Liverpool</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>A</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>D</td>\n",
-       "      <td>T Robinson</td>\n",
-       "      <td>7</td>\n",
-       "      <td>18</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>9</td>\n",
-       "      <td>18</td>\n",
-       "      <td>2</td>\n",
-       "      <td>10</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>E0</td>\n",
-       "      <td>17/08/2024</td>\n",
-       "      <td>15:00</td>\n",
-       "      <td>Arsenal</td>\n",
-       "      <td>Wolves</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>H</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>H</td>\n",
-       "      <td>J Gillett</td>\n",
-       "      <td>18</td>\n",
-       "      <td>9</td>\n",
-       "      <td>6</td>\n",
-       "      <td>3</td>\n",
-       "      <td>17</td>\n",
-       "      <td>14</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>E0</td>\n",
-       "      <td>17/08/2024</td>\n",
-       "      <td>15:00</td>\n",
-       "      <td>Everton</td>\n",
-       "      <td>Brighton</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>A</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A</td>\n",
-       "      <td>S Hooper</td>\n",
-       "      <td>9</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>8</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>E0</td>\n",
-       "      <td>17/08/2024</td>\n",
-       "      <td>15:00</td>\n",
-       "      <td>Newcastle</td>\n",
-       "      <td>Southampton</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>H</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>H</td>\n",
-       "      <td>C Pawson</td>\n",
-       "      <td>3</td>\n",
-       "      <td>19</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>15</td>\n",
-       "      <td>16</td>\n",
-       "      <td>3</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "  Div        Date   Time    HomeTeam     AwayTeam  FTHG  ...  HC  AC  HY  AY HR AR\n",
-       "0  E0  16/08/2024  20:00  Man United       Fulham     1  ...   7   8   2   3  0  0\n",
-       "1  E0  17/08/2024  12:30     Ipswich    Liverpool     0  ...   2  10   3   1  0  0\n",
-       "2  E0  17/08/2024  15:00     Arsenal       Wolves     2  ...   8   2   2   2  0  0\n",
-       "3  E0  17/08/2024  15:00     Everton     Brighton     0  ...   1   5   1   1  1  0\n",
-       "4  E0  17/08/2024  15:00   Newcastle  Southampton     1  ...   3  12   2   4  1  0\n",
-       "\n",
-       "[5 rows x 24 columns]"
+       "Div         0\n",
+       "Date        0\n",
+       "Time        0\n",
+       "HomeTeam    0\n",
+       "AwayTeam    0\n",
+       "FTHG        0\n",
+       "FTAG        0\n",
+       "FTR         0\n",
+       "HTHG        0\n",
+       "HTAG        0\n",
+       "HTR         0\n",
+       "Referee     0\n",
+       "HS          0\n",
+       "AS          0\n",
+       "HST         0\n",
+       "AST         0\n",
+       "HF          0\n",
+       "AF          0\n",
+       "HC          0\n",
+       "AC          0\n",
+       "HY          0\n",
+       "AY          0\n",
+       "HR          0\n",
+       "AR          0\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e4a4948a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Numeric summary:\n",
+      "              FTHG        FTAG        HTHG        HTAG          HS          AS  \\\n",
+      "count  380.000000  380.000000  380.000000  380.000000  380.000000  380.000000   \n",
+      "mean     1.513158    1.421053    0.752632    0.610526   13.752632   12.165789   \n",
+      "std      1.277917    1.189922    0.875867    0.828831    5.588045    5.409987   \n",
+      "min      0.000000    0.000000    0.000000    0.000000    2.000000    1.000000   \n",
+      "25%      1.000000    1.000000    0.000000    0.000000   10.000000    9.000000   \n",
+      "50%      1.000000    1.000000    1.000000    0.000000   13.000000   11.500000   \n",
+      "75%      2.000000    2.000000    1.000000    1.000000   17.000000   15.000000   \n",
+      "max      7.000000    6.000000    4.000000    5.000000   36.000000   37.000000   \n",
+      "\n",
+      "              HST         AST          HF          AF          HC          AC  \\\n",
+      "count  380.000000  380.000000  380.000000  380.000000  380.000000  380.000000   \n",
+      "mean     4.834211    4.265789   10.789474   11.276316    5.426316    4.871053   \n",
+      "std      2.488260    2.341636    3.639840    3.513257    3.183457    3.031358   \n",
+      "min      0.000000    0.000000    2.000000    1.000000    0.000000    0.000000   \n",
+      "25%      3.000000    3.000000    8.000000    9.000000    3.000000    3.000000   \n",
+      "50%      5.000000    4.000000   11.000000   11.000000    5.000000    4.000000   \n",
+      "75%      6.000000    6.000000   13.000000   14.000000    7.000000    7.000000   \n",
+      "max     16.000000   13.000000   21.000000   21.000000   17.000000   18.000000   \n",
+      "\n",
+      "               HY          AY          HR          AR  \n",
+      "count  380.000000  380.000000  380.000000  380.000000  \n",
+      "mean     1.905263    2.144737    0.068421    0.068421  \n",
+      "std      1.395989    1.430021    0.263030    0.252800  \n",
+      "min      0.000000    0.000000    0.000000    0.000000  \n",
+      "25%      1.000000    1.000000    0.000000    0.000000  \n",
+      "50%      2.000000    2.000000    0.000000    0.000000  \n",
+      "75%      3.000000    3.000000    0.000000    0.000000  \n",
+      "max      7.000000    8.000000    2.000000    1.000000  \n",
+      "\n",
+      "Value counts for Div:\n",
+      " Div\n",
+      "E0    380\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Value counts for Date:\n",
+      " Date\n",
+      "25/05/2025    10\n",
+      "21/09/2024     8\n",
+      "14/09/2024     8\n",
+      "26/12/2024     8\n",
+      "28/09/2024     7\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Value counts for Time:\n",
+      " Time\n",
+      "15:00    137\n",
+      "14:00     50\n",
+      "20:00     38\n",
+      "17:30     31\n",
+      "16:30     28\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Value counts for HomeTeam:\n",
+      " HomeTeam\n",
+      "Man United    19\n",
+      "Ipswich       19\n",
+      "Arsenal       19\n",
+      "Everton       19\n",
+      "Newcastle     19\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Value counts for AwayTeam:\n",
+      " AwayTeam\n",
+      "Fulham         19\n",
+      "Liverpool      19\n",
+      "Wolves         19\n",
+      "Brighton       19\n",
+      "Southampton    19\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Value counts for FTR:\n",
+      " FTR\n",
+      "H    155\n",
+      "A    132\n",
+      "D     93\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Value counts for HTR:\n",
+      " HTR\n",
+      "H    142\n",
+      "D    135\n",
+      "A    103\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Value counts for Referee:\n",
+      " Referee\n",
+      "A Taylor      30\n",
+      "M Oliver      25\n",
+      "C Kavanagh    24\n",
+      "S Hooper      23\n",
+      "S Barrott     23\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeric_cols = df.select_dtypes(include=['int64', 'float64']).columns\n",
+    "print(\"\\nNumeric summary:\\n\", df[numeric_cols].describe())\n",
+    "\n",
+    "cat_cols = df.select_dtypes(include=['object', 'category']).columns\n",
+    "for col in cat_cols:\n",
+    "    print(f\"\\nValue counts for {col}:\\n\", df[col].value_counts().head(5))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "6b76b730",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1200x800 with 0 Axes>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1200x800 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.figure(figsize=(12,8))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92846e54",
    "metadata": {},
    "outputs": [],
    "source": []
