--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "01785581",
    "metadata": {},
    "outputs": [],
@@ -16,17 +16,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "9abfc6d3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../dataset/epl-2024-2025-data.csv\")"
+    "import os\n",
+    "import glob\n",
+    "\n",
+    "dataset_dir = \"../dataset\"\n",
+    "\n",
+    "pattern = os.path.join(dataset_dir, \"*.csv\")\n",
+    "files = glob.glob(pattern)\n",
+    "\n",
+    "\n",
+    "season_dfs = {}\n",
+    "for path in files:\n",
+    "    fname= os.path.basename(path)\n",
+    "    if not (fname.startswith(\"Season \")or fname.startswith(\"20\")or fname.startswith(\"epl-2024-2025\")):\n",
+    "        continue\n",
+    "    if fname.startswith(\"Season \"):\n",
+    "        raw = fname[len(\"Season\"):-4]\n",
+    "        season = raw[:4]+ \"_\" + raw[4:]\n",
+    "    elif fname.startswith(\"epl-2024-2025\"):\n",
+    "        season=\"2024_25\"\n",
+    "    else:\n",
+    "        raw = fname[:-4]\n",
+    "        season = raw[:4] + \" \" + raw[4:]\n",
+    "    season_dfs[season] = pd.read_csv(path)\n",
+    "\n",
+    "    combined = pd.concat([df.assign(season=season) for season,df in season_dfs.items()], ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "id": "6a768a6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined.to_csv(\"../dataset/epl_all_seasons_2009_25.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d4ad4cd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"../dataset/epl_all_seasons_2009_25.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "cf76e75e",
    "metadata": {},
    "outputs": [
@@ -60,7 +104,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "e4a4948a",
    "metadata": {},
    "outputs": [
@@ -188,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "d71be4eb",
    "metadata": {},
    "outputs": [
@@ -302,7 +346,7 @@
        "[2 rows x 24 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "id": "6b76b730",
    "metadata": {},
    "outputs": [],
@@ -366,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "id": "0af8f8ac",
    "metadata": {},
    "outputs": [],
@@ -377,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "id": "ca14f40f",
    "metadata": {},
    "outputs": [
@@ -662,7 +706,7 @@
        "19                 42                     16  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "id": "fe61f3b9",
    "metadata": {},
    "outputs": [
@@ -958,7 +1002,7 @@
        "19              44                  25  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,11 +1013,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b021d560",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "At least one array required as input",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m X_train, X_test , Y_train, Y_test = \u001b[43mtrain_test_split\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32md:\\Rhodrick\\Machine Learning\\Epl prediction model\\.venv\\Lib\\site-packages\\sklearn\\utils\\_param_validation.py:216\u001b[39m, in \u001b[36mvalidate_params.<locals>.decorator.<locals>.wrapper\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m    210\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m    211\u001b[39m     \u001b[38;5;28;01mwith\u001b[39;00m config_context(\n\u001b[32m    212\u001b[39m         skip_parameter_validation=(\n\u001b[32m    213\u001b[39m             prefer_skip_nested_validation \u001b[38;5;129;01mor\u001b[39;00m global_skip_validation\n\u001b[32m    214\u001b[39m         )\n\u001b[32m    215\u001b[39m     ):\n\u001b[32m--> \u001b[39m\u001b[32m216\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    217\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m InvalidParameterError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m    218\u001b[39m     \u001b[38;5;66;03m# When the function is just a wrapper around an estimator, we allow\u001b[39;00m\n\u001b[32m    219\u001b[39m     \u001b[38;5;66;03m# the function to delegate validation to the estimator, but we replace\u001b[39;00m\n\u001b[32m    220\u001b[39m     \u001b[38;5;66;03m# the name of the estimator by the name of the function in the error\u001b[39;00m\n\u001b[32m    221\u001b[39m     \u001b[38;5;66;03m# message to avoid confusion.\u001b[39;00m\n\u001b[32m    222\u001b[39m     msg = re.sub(\n\u001b[32m    223\u001b[39m         \u001b[33mr\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mparameter of \u001b[39m\u001b[33m\\\u001b[39m\u001b[33mw+ must be\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m    224\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mparameter of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfunc.\u001b[34m__qualname__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m must be\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m    225\u001b[39m         \u001b[38;5;28mstr\u001b[39m(e),\n\u001b[32m    226\u001b[39m     )\n",
+      "\u001b[36mFile \u001b[39m\u001b[32md:\\Rhodrick\\Machine Learning\\Epl prediction model\\.venv\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:2846\u001b[39m, in \u001b[36mtrain_test_split\u001b[39m\u001b[34m(test_size, train_size, random_state, shuffle, stratify, *arrays)\u001b[39m\n\u001b[32m   2844\u001b[39m n_arrays = \u001b[38;5;28mlen\u001b[39m(arrays)\n\u001b[32m   2845\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m n_arrays == \u001b[32m0\u001b[39m:\n\u001b[32m-> \u001b[39m\u001b[32m2846\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mAt least one array required as input\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m   2848\u001b[39m arrays = indexable(*arrays)\n\u001b[32m   2850\u001b[39m n_samples = _num_samples(arrays[\u001b[32m0\u001b[39m])\n",
+      "\u001b[31mValueError\u001b[39m: At least one array required as input"
+     ]
+    }
+   ],
+   "source": [
+    "X_train, X_test , Y_train, Y_test = train_test_split()"
+   ]
   }
  ],
  "metadata": {
