--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "d4ad4cd7",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "8e0ce27a",
    "metadata": {},
    "outputs": [
@@ -262,7 +262,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "bb8ba38d",
    "metadata": {},
    "outputs": [
@@ -308,7 +308,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
+   "id": "ddc903f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(columns=[\"Time\"], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0087a7b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Div         1\n",
+       "Date        1\n",
+       "HomeTeam    1\n",
+       "AwayTeam    1\n",
+       "FTHG        1\n",
+       "FTAG        1\n",
+       "FTR         1\n",
+       "HTHG        1\n",
+       "HTAG        1\n",
+       "HTR         1\n",
+       "Referee     1\n",
+       "HS          1\n",
+       "AS          1\n",
+       "HST         1\n",
+       "AST         1\n",
+       "HF          1\n",
+       "AF          1\n",
+       "HC          1\n",
+       "AC          1\n",
+       "HY          1\n",
+       "AY          1\n",
+       "HR          1\n",
+       "AR          1\n",
+       "season      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "362f93ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean = df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "e4a4948a",
    "metadata": {},
    "outputs": [
@@ -383,15 +448,6 @@
       "28/09/2019    16\n",
       "Name: count, dtype: int64\n",
       "\n",
-      "Value counts for Time:\n",
-      " Time\n",
-      "15:00    770\n",
-      "14:00    290\n",
-      "20:00    221\n",
-      "17:30    199\n",
-      "16:30    181\n",
-      "Name: count, dtype: int64\n",
-      "\n",
       "Value counts for HomeTeam:\n",
       " HomeTeam\n",
       "Arsenal       304\n",
@@ -445,8 +501,8 @@
     }
    ],
    "source": [
-    "numeric_cols = df.select_dtypes(include=['int64', 'float64']).columns\n",
-    "print(\"\\nNumeric summary:\\n\", df[numeric_cols].describe())\n",
+    "numeric_cols = df_clean.select_dtypes(include=['int64', 'float64']).columns\n",
+    "print(\"\\nNumeric summary:\\n\", df_clean[numeric_cols].describe())\n",
     "\n",
     "cat_cols = df.select_dtypes(include=['object', 'category']).columns\n",
     "for col in cat_cols:\n",
@@ -455,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "a3dc09bc",
    "metadata": {},
    "outputs": [
@@ -468,7 +524,7 @@
        " 201_12012    380\n",
        " 201_22013    380\n",
        " 201_32014    380\n",
-       " 201_42015    381\n",
+       " 201_42015    380\n",
        " 201_52016    380\n",
        " 201_62017    380\n",
        " 201_72018    380\n",
@@ -482,27 +538,27 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"season\"].value_counts().sort_index()\n"
+    "df_clean[\"season\"].value_counts().sort_index()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "id": "6b76b730",
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_teams = df[\"HomeTeam\"].unique()\n",
+    "all_teams = df_clean[\"HomeTeam\"].unique()\n",
     "team_home_stats = []\n",
     "team_away_stats =[]\n",
     "for team in all_teams:\n",
-    "    home_games = df[df[\"HomeTeam\"] == team]\n",
+    "    home_games = df_clean[df_clean[\"HomeTeam\"] == team]\n",
     "    total_home_games = len(home_games)\n",
     "    wins = home_games[home_games[\"FTR\"] == \"H\"].shape[0]\n",
     "    draws = home_games[home_games[\"FTR\"] == \"D\"].shape[0]\n",
@@ -523,7 +579,7 @@
     "        \n",
     "    })\n",
     "\n",
-    "    away_games = df[df[\"AwayTeam\"] == team]\n",
+    "    away_games = df_clean[df_clean[\"AwayTeam\"] == team]\n",
     "    total_away_games = len(away_games)\n",
     "\n",
     "    \n",
@@ -548,41 +604,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "0af8f8ac",
    "metadata": {},
    "outputs": [],
    "source": [
     "team_home_Stats= pd.DataFrame(team_home_stats)\n",
     "team_away_Stats= pd.DataFrame(team_away_stats)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "28ea9156",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.copy()\n",
-    "df[\"home_points\"] = df[\"FTR\"].map({\"H\": 3, \"D\": 1, \"A\": 0})\n",
-    "df[\"away_points\"] = df[\"FTR\"].map({\"A\": 3, \"D\": 1, \"H\": 0})\n",
-    "\n",
-    "home_df = df[[\"season\", \"Date\", \"HomeTeam\", \"home_points\"]].rename(\n",
-    "    columns={\"HomeTeam\": \"team\", \"home_points\": \"points\", \"Date\": \"date\"}\n",
-    ")\n",
-    "away_df = df[[\"season\", \"Date\", \"AwayTeam\", \"away_points\"]].rename(\n",
-    "    columns={\"AwayTeam\": \"team\", \"away_points\": \"points\", \"Date\": \"date\"}\n",
-    ")\n",
-    "long = pd.concat([home_df, away_df], ignore_index=True).sort_values([\"team\", \"season\", \"date\"])\n",
-    "\n",
-    "long[\"rolling_5pts\"] = (\n",
-    "    long\n",
-    "    .groupby([\"team\", \"season\"])[\"points\"]\n",
-    "    .rolling(window=5, min_periods=1)\n",
-    "    .sum()\n",
-    "    .reset_index(level=[0,1], drop=True)\n",
-    ")\n"
    ]
   },
   {
