--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "2b14d6af",
    "metadata": {},
    "outputs": [
@@ -867,7 +867,7 @@
     "    df=team_stats_df,\n",
     "    y_vars=['home_wins', 'away_wins'],\n",
     "    y_labels=['Home Wins', 'Away Wins'],\n",
-    "    title='Comparison of Home vs. Away Wins (Top 20 Teams by Total Wins)',\n",
+    "    title='Comparison of Home vs. Away Wins (Top 20 Teams by Total Wins) From 09 to 2025 season',\n",
     "    sort_by='total_wins'\n",
     ")\n",
     "\n",
@@ -890,8 +890,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "9eade021",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           team  total_points  total_ppg  total_goal_difference  total_win_pct  home_ppg  away_ppg  home_win_pct  away_win_pct\n",
+      "15     Man City          1318       2.17                  841.0          66.61      2.45      1.89         76.97         56.25\n",
+      "12    Liverpool          1211       1.99                  583.0          58.88      2.28      1.71         68.42         49.34\n",
+      "1       Arsenal          1147       1.89                  471.0          55.43      2.20      1.58         66.45         44.41\n",
+      "8       Chelsea          1132       1.86                  452.0          54.77      2.10      1.63         62.50         47.04\n",
+      "9    Man United          1126       1.85                  398.0          54.28      2.12      1.58         64.14         44.41\n",
+      "14    Tottenham          1063       1.75                  325.0          51.32      2.02      1.48         61.84         40.79\n",
+      "4       Everton           833       1.37                   -5.0          35.86      1.70      1.04         47.70         24.01\n",
+      "6     Newcastle           700       1.32                  -72.0          35.90      1.60      1.03         44.74         27.07\n",
+      "17     West Ham           671       1.18                 -154.0          30.70      1.42      0.94         38.60         22.81\n",
+      "16  Aston Villa           594       1.20                 -160.0          31.78      1.39      1.01         37.65         25.91\n"
+     ]
+    }
+   ],
+   "source": [
+    "team_stats_df['home_goal_difference'] = team_stats_df['goals_for_at_home'] - team_stats_df['goals_against_at_home']\n",
+    "team_stats_df['away_goal_difference'] = team_stats_df['goals_for_away'] - team_stats_df['goals_against_away']\n",
+    "team_stats_df['total_goal_difference'] = team_stats_df['total_goals_for'] - team_stats_df['total_goals_against']\n",
+    "\n",
+    "team_stats_df['home_points'] = team_stats_df['home_wins'] * 3 + team_stats_df['home_draws'] * 1\n",
+    "team_stats_df['away_points'] = team_stats_df['away_wins'] * 3 + team_stats_df['away_draws'] * 1\n",
+    "team_stats_df['total_points'] = team_stats_df['home_points'] + team_stats_df['away_points']\n",
+    "\n",
+    "team_stats_df['home_ppg'] = team_stats_df['home_points'] / team_stats_df['home_games']\n",
+    "team_stats_df['away_ppg'] = team_stats_df['away_points'] / team_stats_df['away_games']\n",
+    "team_stats_df['total_games'] = team_stats_df['home_games'] + team_stats_df['away_games']\n",
+    "team_stats_df['total_ppg'] = team_stats_df['total_points'] / team_stats_df['total_games']\n",
+    "\n",
+    "team_stats_df['home_win_pct'] = (team_stats_df['home_wins'] / team_stats_df['home_games']) * 100\n",
+    "team_stats_df['away_win_pct'] = (team_stats_df['away_wins'] / team_stats_df['away_games']) * 100\n",
+    "team_stats_df['total_win_pct'] = (team_stats_df['total_wins'] / team_stats_df['total_games']) * 100\n",
+    "\n",
+    "\n",
+    "pd.set_option('display.width', 1000) \n",
+    "columns_to_show = [\n",
+    "    'team',\n",
+    "    'total_points',\n",
+    "    'total_ppg',\n",
+    "    'total_goal_difference',\n",
+    "    'total_win_pct',\n",
+    "    'home_ppg',\n",
+    "    'away_ppg',\n",
+    "    'home_win_pct',\n",
+    "    'away_win_pct'\n",
+    "]\n",
+    "\n",
+    "print(team_stats_df[columns_to_show].round(2).sort_values(by='total_points', ascending=False).head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9a7178e",
    "metadata": {},
    "outputs": [],
    "source": []
